#191 fix moveto z-index

--- a/compass/src/style_client.scss
+++ b/compass/src/style_client.scss
@@ -113,6 +113,7 @@
                     box-shadow: $box-shadow;
                     background: $light;
                     color: $dark;
+                    z-index: 100;
 
                     .header {
                         padding: 6px 6px;
